--- a/scripts/assign_cell_annotations.Rmd
+++ b/scripts/assign_cell_annotations.Rmd
@@ -11,10 +11,10 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r package_switch}
 
-detach("package:synthspot")
-remove.packages("synthspot")
-
-
+# detach("package:synthspot")
+# remove.packages("synthspot")
+# 
+# library(dplyr)
 ```
 
 
@@ -26,14 +26,14 @@ remove.packages("synthspot")
 #install: https://github.com/saeyslab/synthspot
 
 
-if (!require("BiocManager", quietly = TRUE))
-    install.packages("BiocManager")
-#BiocManager::install("DropletUtils")
+# if (!require("BiocManager", quietly = TRUE))
+#     install.packages("BiocManager")
+# BiocManager::install("DropletUtils")
 library(DropletUtils)
 
 #install.packages("devtools")
 library(devtools)
-install_local("../synthspot_devbuild_0.1", force = TRUE)
+#install_local("../synthspot_devbuild_0.1", force = TRUE)
 library(synthspot)
 
 #devtools::install_github("saeyslab/synthspot")
@@ -45,8 +45,8 @@ library(synthspot)
 ################  Seurat + Dependencies  ################
 #installation: https://satijalab.org/seurat/articles/install_v5
 
-#install.packages('Seurat')
-#install.packages("igraph")
+# install.packages('Seurat')
+# install.packages("igraph")
 ##setRepositories(ind = 1:3, addURLs = c('https://satijalab.r-universe.dev', 'https://bnprks.r-universe.dev/'))
 ##install.packages(c("BPCells", "presto", "glmGamPoi"))
 library(Seurat)
@@ -55,7 +55,7 @@ library(patchwork)
 
 
 ################  Spatial libraries ################
-BiocManager::install("SpatialExperiment")
+#BiocManager::install("SpatialExperiment")
 library(SpatialExperiment)
 
 ################  Other libraries ################  
@@ -89,7 +89,7 @@ meta<- read.csv("data/scRNA_wu/metadata.csv") # TODO: need to also account for d
 rownames(meta) <- colnames(in_data)
 AddMetaData(in_data, meta)
 
-in_data@meta.data$celltype_subset <- meta$celltype_subset
+in_data@meta.data$celltype_subset <- meta$celltype_minor # celltype change
 
 ```
 
@@ -97,7 +97,8 @@ in_data@meta.data$celltype_subset <- meta$celltype_subset
 
 ```{r cluster_assignment, echo=FALSE}
 
-Idents(in_data) <- meta$celltype_subset
+#Idents(in_data) <- meta$celltype_subset
+Idents(in_data) <- meta$celltype_minor
 head(Idents(in_data))
 
 ```
@@ -107,16 +108,19 @@ head(Idents(in_data))
 # in_data_v3[["RNA"]] <- as(object = in_data_v3[["RNA"]], Class = "Assay")
 
 synthetic_visium_data = generate_synthetic_visium(seurat_obj = in_data, 
-                                                  dataset_type = "artificial_uniform_distinct", 
+                                                  dataset_type = "artificial_dominant_celltype_diverse", 
                                                   clust_var = "celltype_subset", 
                                                   n_regions = 5, 
-                                                  n_spots_min = 350, 
-                                                  n_spots_max = 351, 
+                                                  n_spots_min = 10, 
+                                                  n_spots_max = 120, 
                                                   visium_mean = 30000, 
-                                                  visium_sd = 8000)
+                                                  visium_sd = 8000,
+                                                  select_celltype = "Endothelial RGS5")
 
 
 ```
+
+
 ```{r assign_coords, echo=FALSE}
 
 region_coords <- read.csv("./data/spot_coords/regions_coords.csv")
@@ -136,20 +140,26 @@ filtered_counts <- counts[, choose_counts] # final counts matrix
 
 ```{r build_spatial_obj, echo=FALSE}
 
-spatial_obj <- SpatialExperiment(assay=filtered_counts,
+spatial_obj <- SpatialExperiment(assay= list(counts = filtered_counts),
                                  colData=region_coords,
                                  spatialCoordsNames = c("X.Coordinate", "Y.Coordinate"))
 
+#export
+# saveRDS(spatial_obj, file="spatialExp.rds")
+# saveRDS(in_data, file = "seuratObj.rds")
 
 ```
 
 
+```{r testzone, echo=FALSE}
+print_celltypes <- table(in_data@meta.data[,"celltype_subset"])
+print(print_celltypes)
 
 
 
 
-
-
+print("hello")
+```
 
 
 
